# xtb_ase

./: .codecov.yml  .gitignore  404.html  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  release.yaml  tests.yaml
about/: changelog.html  conduct.html  license.html  people.html
dev_guide/: contributing.html
docs/: gen_ref_pages.py  index.md
docs/about/: changelog.md  conduct.md  license.md  people.md
docs/dev_guide/: contributing.md
docs/example_docs/about/: changelog.md  license.md
docs/example_docs/code/: hints.md  source.md  tests.md
docs/example_docs/github/: commits.md  workflows.md
docs/example_docs/installation/: install.md  pyproject.md
docs/example_docs/intro/: resources.md  why.md
docs/example_docs/mkdocs/: build.md  docs.md
docs/example_docs/other/: apps.md  linting.md
docs/example_docs/setup/: basics.md  name.md  prep.md
docs/install_guide/: install.md
docs/user_guide/: basics.md  parameters..md  parameters.md
install_guide/: install.html
reference/: SUMMARY.html
reference/xtb_ase/: _io.html  calculator.html
search/: search_index.js  search_index.json
src/template/: __init__.py  ase.py
src/template/examples/: __init__.py  sample.py
src/xtb_ase/: __init__.py  _io.py  calculator.py  io.py
tests/: requirements.txt  test_calc.py  test_calculator.py  test_io.py
tests/calculator/: test_calc.py
tests/examples/: test_sample.py
user_guide/: basics.html  parameters.html
